<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameScreen"
    tools:ignore="ExtraText">

  //score

  <TextView
      android:id="@+id/score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="180dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="180dp"
      android:text="@string/_0"
      android:textAlignment="center"
      android:textSize="60sp"
      android:textStyle="bold" />

  //info for input
  <TextView
      android:id="@+id/infoInput"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/score"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="40dp"
      android:layout_marginTop="45dp"
      android:layout_marginEnd="40dp"
      android:text="@string/enter_your_answer_here"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textSize="20sp" />

  //input box

  <EditText
      android:id="@+id/inputA"
      android:layout_width="340dp"
      android:layout_height="78dp"
      android:layout_below="@+id/infoInput"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="40dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="40dp"
      android:autofillHints="Guess the number here"
      android:ems="10"
      android:inputType="textPersonName"
      android:textAllCaps="true"
      tools:ignore="LabelFor,SpeakableTextPresentCheck" />

  //button for checking the answer

  <Button
      android:id="@+id/guessbtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/inputA"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="120dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="120dp"
      android:background="@drawable/button_style"
      android:padding="10dp"
      android:text="@string/guess"
      android:textSize="30sp" />

  //menu button

  <Button
      android:id="@+id/mainMenubtn"
      android:layout_width="120dp"
      android:layout_height="65dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="240dp"
      android:layout_marginBottom="40dp"
      android:background="@drawable/button_style"
      android:text="@string/menu"
      android:textSize="20sp" />

  //hint button

  <Button
      android:id="@+id/hintbtn"
      android:layout_width="111dp"
      android:layout_height="63dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="240dp"
      android:layout_marginEnd="50dp"
      android:layout_marginBottom="40dp"
      android:background="@drawable/button_style"
      android:text="@string/hint"
      android:textSize="20sp" />


</RelativeLayout>